# ChangeLog for dev-libs/opensc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.136 2014/02/19 19:39:59 alonbl Exp $

  19 Feb 2014; Alon Bar-Lev <alonbl@gentoo.org>
  -files/opensc-0.11.13+pcsc-lite-1.6.2.patch,
  -files/opensc-0.11.13-overflows.patch, -opensc-0.11.13-r2.ebuild:
  Cleanup old ebuilds

  19 Feb 2014; Alon Bar-Lev <alonbl@gentoo.org>
  +files/opensc-0.13.0-openssl.patch, opensc-0.13.0.ebuild:
  Fix USE -ssl

  08 Feb 2013; Alon Bar-Lev <alonbl@gentoo.org> metadata.xml,
  opensc-0.13.0.ebuild:
  Add secure-messaging USE, bug#456044, thanks to  Marcus van Dam

*opensc-0.13.0 (01 Jan 2013)

  01 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> +opensc-0.13.0.ebuild,
  metadata.xml:
  Version bump, per bug#449676

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> opensc-0.12.2-r2.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #432766

  27 Sep 2012; Anthony G. Basile <blueness@gentoo.org> opensc-0.12.2-r2.ebuild:
  stable ppc64, bug #432766

  23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> opensc-0.12.2-r2.ebuild:
  x86 stable wrt bug #432766

  12 Sep 2012; Jeroen Roovers <jer@gentoo.org> opensc-0.12.2-r2.ebuild:
  Stable for HPPA (bug #432766).

  08 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

  06 Sep 2012; Agostino Sarubbo <ago@gentoo.org> opensc-0.12.2-r2.ebuild:
  Stable for amd64, wrt bug #432766

  28 Aug 2012; Anthony G. Basile <blueness@gentoo.org> opensc-0.12.2-r2.ebuild:
  Stable arm, bug #432766

  28 Aug 2012; Anthony G. Basile <blueness@gentoo.org> opensc-0.12.2-r2.ebuild:
  Stable ppc, bug #432766

*opensc-0.12.2-r2 (26 Aug 2012)

  26 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> +opensc-0.12.2-r2.ebuild,
  -opensc-0.12.2-r1.ebuild:
  Fix bug #432770 thanks to Maxim Kammerer.

  24 Jun 2012; Diego E. Pettenò <flameeyes@gentoo.org>