@@ -7,14 +7,16 @@ AUX opensc-0.12.2-parallelinstall.patch 2249 SHA256 70d94889f3443f1b8b303f6adb77
 AUX opensc-0.13.0-openssl.patch 963 SHA256 6a61d3fc4750026a15ec6e2a4594ab8123e748f40e79f08622c646f13f6ddbc7 SHA512 a1108f404f5ceb87808d9be7dfff4391152d5d3d4f63946f56946c31d78b5a521f3d916ed5e8b76019560817812dceeb6aff0020904dddaaf13fe87fc7e43f76 WHIRLPOOL 3e0e6a126540fe053321f268c2489709ca0f1abf2bd759000c5315c655666bae2ea9a9bd1ef7ae835f9708dbdb806a1e551619cd25d64ac62353aad5fc492070
 DIST opensc-0.12.2.tar.gz 1738553 SHA256 50e7371c0f45a3ed887098b712554905e3ef639d4dfca5ac90b8af5f69f1e675 SHA512 544971f2c79723f618806c7043f0f1ffc25332752cbcaec97ffb1c99f9a2dff2237a6e5f5e020a4b9878921fec3a5234ca7e4fe9c8175c3f6142b169fcc65334 WHIRLPOOL 4969811d68d72e82c3a2b0297d5ff9aaca083b6ef8e66223d4385dce35cd9560cdda7cca8ccd38b52eb55465dbd6f8704485778b21d2a88bb548a5bbd87071e2
 DIST opensc-0.13.0.tar.gz 1946899 SHA256 abde46ae53b12b3273e40c532ffd4f7d423a51e0919a5234761453c17c089b14 SHA512 2d33088ff208f6a492dea896a0c0ccbf79b21bbcd953eb89cc7659fd60feb3e9258c2cdbb3112c30b16c3b4ef5bcfc914e0c3783894ac0b119a67116c1703a51 WHIRLPOOL 25934d790f3f855136aac263a49c0d49b604b748b9bad9f7de62d3781f37dc3e318c7fa9a20280fe7ca806ad6ea8d9ec104ba9a8a45b82237039fd965777d6e8
+DIST opensc-0.14.0.tar.gz 2039158 SHA256 facdca215f74d999b286ae246ada8d8fcb97ce58f0a6dd30d8b1c180101e9bf0 SHA512 f5b39ff5de13e9171dfd27953145abf2adf7beb3663094e43d5472a7d2c6a37c61b36993a67d3c362ff2ecf789b3b8fa4803038ba34e14f755f789c75e2978da WHIRLPOOL 1eba0c2bac92fe849e627dca4338332caff7919fd607118520352f3a69dde74adf9f7ef57e4314feceb777d8e17fe7a6abcc16f9094fc7e83287404a36b24cac
 EBUILD opensc-0.12.2-r2.ebuild 1949 SHA256 260261e276bf1f55132381710630c6821eeef3534ab9e75a578a556594a834e5 SHA512 7b063a0a7031d30cfa27448a395efc3b12b402f60ab76355a085e41837aab9136500e2aaa9e6713a1e0bff2a9eb6e14d3f7f3d2d95d27f91f3e78a0cf356047e WHIRLPOOL 84cb1771ae4c7aa6d316876f0fc3552e0a6b26a30a270c20cdcd9b7974fd975b6cd7f30b63a814bb0afb682cff1847099994cd9b71de6358091622480c214922
 EBUILD opensc-0.13.0.ebuild 1481 SHA256 ed246c68adcd3e6057a6d674a9f724d96d5a0359c1b8b7100ab9cf5478ee64c4 SHA512 dc5272cc71356c7633015a9eb418aa0c3c7136c86eebdfa397d75297164308f9fd2929c9641bcef47616627250dc55f4e836535ae437db31b6b7daac0275a97b WHIRLPOOL 5c0ecae2eb320146af05a4acd649661c9862f5071488fc865631a3b48477d65e68fda15964054b3e708940654cf8f11e9db7ba91ef4b3540031301a7830f9a82
-MISC ChangeLog 20417 SHA256 706d51cfbf3525f3684cd111797add2f90ea7f62fb1ac4a34f5975765ffe8837 SHA512 f2d6a08e9330d175e295802bcc30774d7db6342075dec322169dcb597e3b238ad39c346b664c6a47b072a983c104be8108d541898d822da01c38d90dc075056a WHIRLPOOL cb4467231f551824f4c2bee86a8a1929e1462ccd6dd3037d3a8adda333f94cbb919aea5e44589cc32be0e08e47dc5512e9b1e735a159fe7738f454f8545fe234
+EBUILD opensc-0.14.0.ebuild 1421 SHA256 ec6186c262514ff0994372686f729080ea7c5d4c6fec73ac4d19978a3c40ef9e SHA512 b5637f294512ecf97f78d676bced478e710f8370b9b167bddbd0df4f484b9be20e30ab2f85d4a58219350bd3262f5cbe8d94113240d1ff92400d566d244c7a62 WHIRLPOOL 3034d444db5744cb933c7111a5519b04082b3c1bf6097a73d8c78e057ef4a1347a43ecf4c5ed5d7e94685a26736e8eb1f6bc1c20252c5af961c3c581ea36d3cf
+MISC ChangeLog 20576 SHA256 2322d50925f0e9159e34647a2e7c1577c2a7180765237cabac5e00738f833e80 SHA512 a338224f519f7f4177e2b16bf2225e211168133dce40b1bad1891b0e8c403650a94cec34decfd71e663eef51467789e7eea6cf226867a30288aba1e1963d7f35 WHIRLPOOL 95f16233c76a4be89220b89051157a90ae9e19cfcf0e3c11a056c0a21ad8ed0e22cc5d4227f2655dfdd663f323c7afdad93acd78f88efce9eb78c6ae76985576
 MISC metadata.xml 1210 SHA256 d4083d49ca45196e8650f6fc7900ba1569eaea7aecbf940425473ff6c339bc4c SHA512 5ea60e9893d894ef225d47d60b4381936734221566c346ca53f6df3be5936d45187ab5e8d5b8ffc1a1a090c48ea9ace3fded309e2972358c98fc498effa1f0df WHIRLPOOL 1c9acf6a9bd7ed2c6b3a563095d10d935bddb0cec867efed873fcc4793e13ffb5eeb3eb008b84dd5dd15eb849ad428f81281ca402a19c351e9d72c55e43f5c58
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlMFCJkACgkQXYk9GL8g3FFyYAD/WMt8MKTJ8Tp414sEM7lYMsw3
-yKt5TDaZpgaG1anau4EA/33/S36jn63HodmNBHW/wDK/cQR3gqyHneKOCMmM6Bqc
-=vIev
+iF4EAREIAAYFAlP45kEACgkQXYk9GL8g3FGd1QD7B5BMxUGoiSIbpmAU5yJUYeo2
+s4gTvSRjebFxVn5JAt8A/1QXk3W5kdwQTUzZLCS5MVuz7LIQzebPeF7wP5ZVipv/
+=noEP
 -----END PGP SIGNATURE-----
