@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install
+DEPEND=zlib? ( sys-libs/zlib ) readline? ( sys-libs/readline ) ssl? ( dev-libs/openssl ) openct? ( >=dev-libs/openct-0.5.0 ) pcsc-lite? ( >=sys-apps/pcsc-lite-1.3.0 ) virtual/pkgconfig app-text/docbook-xsl-stylesheets dev-libs/libxslt
+DESCRIPTION=Libraries and applications to access smartcards
+EAPI=5
+HOMEPAGE=https://github.com/OpenSC/OpenSC/wiki
+IUSE=doc +pcsc-lite secure-messaging openct ctapi readline ssl zlib
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+LICENSE=LGPL-2.1
+RDEPEND=zlib? ( sys-libs/zlib ) readline? ( sys-libs/readline ) ssl? ( dev-libs/openssl ) openct? ( >=dev-libs/openct-0.5.0 ) pcsc-lite? ( >=sys-apps/pcsc-lite-1.3.0 )
+REQUIRED_USE=pcsc-lite? ( !openct !ctapi ) openct? ( !pcsc-lite !ctapi ) ctapi? ( !pcsc-lite !openct ) || ( pcsc-lite openct ctapi )
+SLOT=0
+SRC_URI=mirror://sourceforge/opensc/opensc-0.14.0.tar.gz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=05814a18baa67ff0c7dee638137a98ca
